Add real links and section buttons

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                     <h3>Diseño Computacional</h3>
                     <p>Donde los algoritmos se vuelven arte. Un estudio dedicado a la exploración de la forma a través
                         del código generativo y la lógica paramétrica.</p>
+                    <a href="https://jamagax.dimensionn.xyz" target="_blank" class="btn-section">Entrar al Studio</a>
                 </div>
                 <div class="visual-block studio-visual">
                     <div class="abstract-circle"></div>
@@ -75,6 +76,7 @@
                     <h3>Academia & Software</h3>
                     <p>La puerta al conocimiento. Academia de Diseño Computacional y punto oficial para Rhino y KeyShot.
                         Aprende a construir tus propias herramientas y visiones.</p>
+                    <a href="https://dimensionn.xyz" target="_blank" class="btn-section">Explorar Academia</a>
                 </div>
                 <div class="visual-block dim-n-visual">
                     <div class="cube-grid"></div>
@@ -90,6 +92,7 @@
                     <h3>Libro Interactivo</h3>
                     <p>Un compendio vivo del conocimiento espacial. Más que un libro, una experiencia explorable sobre
                         las leyes que gobiernan la forma.</p>
+                    <a href="https://geometrica.xyz" target="_blank" class="btn-section">Abrir Enciclopedia</a>
                 </div>
                 <div class="visual-block geo-visual">
                     <div class="geo-structure"></div>
@@ -105,6 +108,8 @@
                     <h3>Fabricación Digital en Tulum</h3>
                     <p>Materializando lo digital. Mi laboratorio personal equipado con la P1S, trayendo objetos desde el
                         hiperespacio a la realidad física en el corazón de la selva.</p>
+                    <a href="https://www.instagram.com/3dkinlab/" target="_blank" class="btn-section">Ver
+                        Laboratorio</a>
                 </div>
                 <div class="visual-block lab-visual">
                     <div class="printer-layer"></div>
