feat: Add Music Section and Ecosystem Intro

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         <ul class="nav-links">
             <li><a href="#studio">Studio</a></li>
             <li><a href="#dimension-n">Dimension N</a></li>
+            <li><a href="#dimension-n">Dimension N</a></li>
             <li><a href="#philosophy">Filosofía</a></li>
+            <li><a href="#musica">Música</a></li>
             <li><a href="#enciclopedia">Geometría</a></li>
             <li><a href="#lab">Lab</a></li>
             <li><a href="#repos">Git</a></li>
@@ -50,8 +52,13 @@
                 <p class="subtitle">&lt; NEXUS_ONLINE // JAMAGAX_V2.5 &gt;</p>
                 <h1 class="glitch" data-text="JAMAGAX">JAMAGAX</h1>
                 <div class="hero-bio">
-                    <p>Polímata operando en la convergencia del código, la simetría y la materia. Bienvenido a mi
-                        frecuencia.</p>
+                    <p><strong>Identidad Operativa:</strong> Polímata en la convergencia del código y la materia.</p>
+                    <p class="ecosystem-text">
+                        Esta página es el <strong>Nodo Central</strong> que conecta todas mis realidades. Aquí se
+                        unifica mi trabajo como
+                        Músico, Programador y Diseñador Computacional. No es solo un portafolio, es el sistema operativo
+                        de mi visión creativa.
+                    </p>
                 </div>
             </div>
             <div class="hero-graphic" id="hero-canvas-container">
@@ -180,6 +187,36 @@
                         rigen la materia universal. Basado en el sistema Onyx & Paper White.</p>
                     <a href="https://github.com/Jamagax/geometrica" target="_blank" class="btn-section">Explorar
                         Repositorio</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- MUSIC SECTION -->
+        <section id="musica" class="content-section">
+            <div class="section-container">
+                <div class="text-block">
+                    <h2>Frecuencias Sonoras</h2>
+                    <h3>Proyectos Musicales</h3>
+                    <p>La música es la arquitectura del tiempo. Mis exploraciones sónicas se dividen en tres canales:
+                    </p>
+
+                    <div class="music-grid">
+                        <div class="music-card">
+                            <h4>Capitán 0</h4>
+                            <span class="genre-tag">ROCK / ALTERNATIVE</span>
+                            <p>Banda de Rock. Energía cruda y narrativa lírica.</p>
+                        </div>
+                        <div class="music-card">
+                            <h4>Los Perros Cósmicos</h4>
+                            <span class="genre-tag">PSYCH / EXPERIMENTAL</span>
+                            <p>Exploración sonora y viajes auditivos.</p>
+                        </div>
+                        <div class="music-card">
+                            <h4>Jamagax Solo</h4>
+                            <span class="genre-tag">COMPOSER / COLLABS</span>
+                            <p>Composiciones orquestales, sintes modulares y colaboraciones.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
